[NEW] Cleaned up boilerplate base
[NEW] Added all modules and styles

--- a/src/modules/bottom-highlight.module/module.html
+++ b/src/modules/bottom-highlight.module/module.html
@@ -1,19 +1,15 @@
-{# Module styles #}
-
+<!-- module html  -->
 {% require_css %}
   <style>
     {% scope_css %}
+      .bottom-highlight__content {
+        background-color: {{ theme.global_colors.primary.color }};
+      }
       {% set circle_size = 52 %}
 
       .button-wrapper {
         padding: {{ circle_size }}px 0 {{ circle_size }}px {{ circle_size }}px;
       }
-
-      {% if module.styles.alignment.alignment %}
-        .button-wrapper {
-          text-align: {{ module.styles.alignment.alignment.horizontal_align }};
-        }
-      {% endif %}
 
       .button {
         display: inline-block;
@@ -23,11 +19,7 @@
         font-size: 1.2rem;
         line-height: 1.2rem;
         padding-right: 32px;
-        {% if module.styles.text.color.color %}
-          color: rgba({{ module.styles.text.color.color|convert_rgb }}, {{ module.styles.text.color.opacity / 100 }});
-        {% endif %}
-
-        {{ module.styles.spacing.spacing.css }}
+        color: #FFF;
       }
 
       .button::before {
@@ -66,33 +58,33 @@
         top: calc(1.2rem - 17px);
         right: 8px;
       }
-
     {% end_scope_css %}
   </style>
 {% end_require_css %}
 
-{# Sets attributes used for the link field #}
-
-{% set href = module.link.url.href %}
-{% if module.link.url.type == "EMAIL_ADDRESS" %}
-  {% set href = "mailto:" + href %}
-{% endif %}
-{% set rel = [] %}
-{% if module.link.no_follow %}
-  {% do rel.append("nofollow") %}
-{% endif %}
-{% if module.link.open_in_new_tab %}
-  {% do rel.append("noopener") %}
-{% endif %}
-
-{# Button #}
-
-<div class="button-wrapper">
-  <a class="button" href="{{ href }}"
-  {% if module.link.open_in_new_tab %}target="_blank"{% endif %}
-  {% if rel %}rel="{{ rel|join(" ") }}"{% endif %}
-  >
-    {{ module.button_text }}
-    <svg viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29289 0.292893C7.68342 -0.0976311 8.31658 -0.0976311 8.70711 0.292893L15.7071 7.29289C16.0976 7.68342 16.0976 8.31658 15.7071 8.70711L8.70711 15.7071C8.31658 16.0976 7.68342 16.0976 7.29289 15.7071C6.90237 15.3166 6.90237 14.6834 7.29289 14.2929L12.5858 9H1C0.447715 9 0 8.55228 0 8C0 7.44772 0.447715 7 1 7H12.5858L7.29289 1.70711C6.90237 1.31658 6.90237 0.683417 7.29289 0.292893Z" /></svg>
-  </a>
+<div class="bottom-highlight">
+  <div class="bottom-highlight__content">
+    <div class="bottom-highlight__content-text">
+      {{ module.content | replace("\n", "<br />") }}
+    </div>
+    <div class="bottom-highlight__content-link">
+      <div class="button-wrapper">
+        {% set href = module.button_link.url.href %}
+        {% set rel = [] %}
+        {% if module.button_link.no_follow %}
+          {% do rel.append("nofollow") %}
+        {% endif %}
+        {% if module.button_link.open_in_new_tab %}
+          {% do rel.append("noopener") %}
+        {% endif %}
+        <a class="button" href="{{ href }}"
+        {% if module.button_link.open_in_new_tab %}target="_blank"{% endif %}
+        {% if rel %}rel="{{ rel|join(" ") }}"{% endif %}
+        >
+          {{ module.button_text }}
+          <svg viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29289 0.292893C7.68342 -0.0976311 8.31658 -0.0976311 8.70711 0.292893L15.7071 7.29289C16.0976 7.68342 16.0976 8.31658 15.7071 8.70711L8.70711 15.7071C8.31658 16.0976 7.68342 16.0976 7.29289 15.7071C6.90237 15.3166 6.90237 14.6834 7.29289 14.2929L12.5858 9H1C0.447715 9 0 8.55228 0 8C0 7.44772 0.447715 7 1 7H12.5858L7.29289 1.70711C6.90237 1.31658 6.90237 0.683417 7.29289 0.292893Z" /></svg>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
