--- a/src/modules/list-explanation.module/module.html
+++ b/src/modules/list-explanation.module/module.html
@@ -5,6 +5,10 @@
       .list-explanation__side-content blockquote {
         color: {{ theme.global_colors.primary.color }};
       }
+      .list-explanation__left-content,
+      .list-explanation__right-content {
+        border-color: {{ theme.global_colors.secondary.color }};
+      }
     {% end_scope_css %}
   </style>
 {% end_require_css %}
