--- a/src/modules/bottom-highlight.module/module.html
+++ b/src/modules/bottom-highlight.module/module.html
@@ -12,7 +12,7 @@
 <div class="bottom-highlight">
   <div class="bottom-highlight__content">
     <div class="bottom-highlight__content-text">
-      {{ module.content | replace("\n", "<br />") }}
+      {{ module.content | replace("\n", "<br />") if module.content is truthy else "Reach Out to Us and Have Your Say" }}
     </div>
     <div class="bottom-highlight__content-link">
       <div class="strype-button">
@@ -28,7 +28,7 @@
         {% if module.button_link.open_in_new_tab %}target="_blank"{% endif %}
         {% if rel %}rel="{{ rel|join(" ") }}"{% endif %}
         >
-          {{ module.button_text }}
+          {{ module.button_text if module.button_text is truthy else "Contact Us" }}
           <svg class="strype-button__arrow" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29289 0.292893C7.68342 -0.0976311 8.31658 -0.0976311 8.70711 0.292893L15.7071 7.29289C16.0976 7.68342 16.0976 8.31658 15.7071 8.70711L8.70711 15.7071C8.31658 16.0976 7.68342 16.0976 7.29289 15.7071C6.90237 15.3166 6.90237 14.6834 7.29289 14.2929L12.5858 9H1C0.447715 9 0 8.55228 0 8C0 7.44772 0.447715 7 1 7H12.5858L7.29289 1.70711C6.90237 1.31658 6.90237 0.683417 7.29289 0.292893Z" /></svg>
         </a>
       </div>
