--- a/src/modules/multi-step-by-step.module/module.html
+++ b/src/modules/multi-step-by-step.module/module.html
@@ -2,37 +2,37 @@
 {% require_css %}
   <style>
     {% scope_css %}
-      .step-by-step__content {
+      .multi-step-by-step__content {
         border-color: {{ theme.global_colors.secondary.color }};
       }
-      .step-by-step__list-item::before {
+      .multi-step-by-step__list-item::before {
         background-color: {{ theme.global_colors.secondary.color }};
       }
     {% end_scope_css %}
   </style>
 {% end_require_css %}
 
-<div class="step-by-step">
-  <div class="step-by-step__content">
+<div class="multi-step-by-step">
+  <div class="multi-step-by-step__content">
     {% for list in module.lists %}
-      <ul class="step-by-step__list">
+      <ul class="multi-step-by-step__list">
         {% if list.before_content is truthy %}
-        <li class="step-by-step__list-item step-by-step--content">
-          <div class="step-by-step__item-content">
+        <li class="multi-step-by-step__list-item multi-step-by-step--content">
+          <div class="multi-step-by-step__item-content">
             {{ list.before_content }}
           </div>
         </li>
         {% endif %}
         {% for item in list.items %}
-          <li class="step-by-step__list-item">
-            <div class="step-by-step__item-content">
+          <li class="multi-step-by-step__list-item">
+            <div class="multi-step-by-step__item-content">
               {{ item.item_content }}
             </div>
           </li>
         {% endfor %}
         {% if list.after_content is truthy %}
-        <li class="step-by-step__list-item step-by-step--content">
-          <div class="step-by-step__item-content">
+        <li class="multi-step-by-step__list-item multi-step-by-step--content">
+          <div class="multi-step-by-step__item-content">
             {{ list.after_content }}
           </div>
         </li>
