[FIX] recent-reviews module border color

--- a/src/modules/recent-reviews.module/module.html
+++ b/src/modules/recent-reviews.module/module.html
@@ -3,7 +3,7 @@
 {% require_css %}
   <style>
     {% scope_css %}
-      .recent-reviews__content {
+      .recent-reviews__wrap {
         border-color: {{ theme.global_colors.secondary.color }};
       }
     {% end_scope_css %}
